--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@ type="text/css" title="Snp sig">
         <p class="textzone"><h3>GENERAL INFO:</h3>
                   <b>WHAT:</b>  Variant Interpretation COSI Session at the ISMB/ECCB Conference<br>
 		  <b>WHEN:</b>  10:15 AM - 6:00 PM, July 24th, 2019<br>
-		  <b>WHERE:</b> Room: Congress Center, Basel, Switzerland.<br />
+		  <b>WHERE:</b> Room: Montreal (2nd Floor), Congress Center, Basel (Switzerland).<br />
                                                                     
 		  <br />
 		</strong>
                 <img src="img/PU3.gif" width="17" height="14" /><img src="img/PU1.gif" width="12" height="12" />
-                VarI-COSI Session 2019 - <a href="schedu.html"><b>Preliminary Program</b></a>
+                VarI-COSI Session 2019 - <a href="schedu.html"><b>Final Program</b></a>
                 </i>
                 <br />
                 <br />
