--- a/schedu.html
+++ b/schedu.html
@@ -254,7 +254,7 @@ Annotation and prediction of structural/functional impacts of genetic variants.
               <td><span class="textzone"><strong>10:20 - 11:00</strong><br>&nbsp;</span></td>
               <td><span class="textzone"><strong>Invited Speaker:</strong>
               <a href="http://grib.imim.es/about-us/laurai-furlong/" target=blank><strong>Laura Furlong.</strong></a>
-              Universitat Pompeu Fabra, Barcelona (Spain).
+              Hospital del Mar Medical Research Institute, Barcelona (Spain).
               <br>
               <i>
               The DisGeNET platform of disease genomics to support variant interpretation.
@@ -422,7 +422,7 @@ Annotation and prediction of structural/functional impacts of genetic variants.
               <td><span class="textzone"><strong>17:20 - 17:40</strong><br>&nbsp;<br>&nbsp;</span></td>
               <td><span class="textzone">
 
-		 <u>Bojian Yin.</u> Centrum Wiskunde en Informatica, Amsterdam (Netherland).
+		 <u>Alexander Schoenhuth.</u> Centrum Wiskunde en Informatica, Amsterdam (Netherland).
                           <br><i>
 			 Using the structure of genome data in the design of deep neural networks for predicting amyotrophic lateral<br> sclerosis from genotype. 
                           </i>
