--- a/special.html
+++ b/special.html
@@ -234,10 +234,10 @@ type="text/css" title="Snp sig">
 	
 	The <b><a href="http://varisig.biofold.org/2018/" target=blank>VarI-COSI 2018</a></b> Special Issue 
 	has been published on BMC Genomics and Medical Genomics and Bioinformatics. The accepted papers of the special issue 
-	are available at BMC Genomics 
+	are available at the
         <a href="https://bmcgenomics.biomedcentral.com/articles/supplements/"
         target=blank>BMC Genomics</a>,
-	BMC Medical Genomics
+	
 	<a href="https://bmcmedgenomics.biomedcentral.com/articles/supplements/"
 	target=blank>BMC Medical Genomics</a>
         and
@@ -248,52 +248,70 @@ type="text/css" title="Snp sig">
 	The list of the selected manuscript is reported below. 
 	<br><br>
 
-	<li>	
-	H. Billur Engin, Daniel Carlin, Dexter Pratt and Hannah Carter. Modeling of RAS complexes supports roles in cancer for less studied partners. BMC Biophysics 2017, 10 (Suppl 1):5.
-	<a href="https://bmcbiophys.biomedcentral.com/track/pdf/10.1186/s13628-017-0037-6">PMID:TBA</a>
-	</li><br>
-        <li>
-	Elena Álvarez de la Campa, Natàlia Padilla and Xavier de la Cruz. Development of pathogenicity predictors specific for variants that do not comply with clinical guidelines for the use of computational evidence. BMC Genomics 2017, 18 (Suppl 5):569.
-	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3914-0">PMID:TBA</a>
+	<ul>
+	<li>
+	Bromberg Y, Capriotti E, Carter H. VarI-COSI 2018: A forum for research advances in variant interpretation and diagnostics. BMC Genomics. 2019, 20 (Suppl 8): I1.	
+	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
         </li><br>
-	<li>
-	Andreas Krämer, Sohela Shah, Robert Anthony Rebres, Susan Tang and Daniel Rene Richards. Leveraging network analytics to infer patient syndrome and identify causal genes in rare disease cases. BMC Genomics 2017, 18 (Suppl 5):551.
-	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3910-4">PMID:TBA</a>
-	</li><br>
-	<li>
-	Giulia Babbi, Pier Luigi Martelli, Giuseppe Profiti, Samuele Bovo, Castrense Savojardo and Rita Casadio. eDGAR: a database of Disease-Gene Associations with annotated Relationships among genes. BMC Genomics 2017, 18 (Suppl 5):554.
-	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3911-3">PMID:TBA</a>
-	</li><br>
-	<li>
-	Morena Pappalardo, Francesca Collu, James Macpherson, Martin Michaelis, Franca Fraternali and Mark N. Wass. Investigating Ebola virus pathogenicity using molecular dynamics. BMC Genomics 2017, 18 (Suppl 5):566.
-	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3912-2">PMID:TBA</a>
-	</li><br>
-	<li>
-	Henry J. Martell, Kathie A. Wong, Juan F. Martin, Ziyan Kassam, Kay Thomas and Mark N. Wass. Associating mutations causing cystinuria with disease severity with the aim of providing precision medicine. BMC Genomics 2017, 18 (Suppl 5):550.
-	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3913-1">PMID:TBA</a>
-	</li><br>
-<!--
 
-		Pons T, Vazquez M, Matey-Hernandez ML, Brunak S, Valencia A and Izarzugaza JMG: KinMutRF: a random forest classifier of sequence variants in the human protein kinase superfamily. BMC Genomics 2016 17(Suppl 2):396. 
-		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2723-1?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
-	<li>	
-		Kaplun A, Krull M, Lakshman K, Matys V,Lewicki B,  Jennifer D. Hogan JD: Establishing and validating regulatory regions for variant annotation and expression analysis. BMC Genomics 2016 17(Suppl 2):393. 
-		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2724-0?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
-	<li>	
-		Ayers KL, Mirshahi UL, Wardeh AH, Murray MF, Hao K, Glicksberg BS, Li S, Carey DJ, Chen R: A loss of function variant in CASP7 protects against Alzheimer’s disease in homozygous APOE ε4 allele carriers. BMC Genomics 2016 17(Suppl 2):445. 
-		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2725-z?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
 	<li>
-		Martelli PL, Fariselli P, Savojardo C, Babbi G, Aggazio F, Casadio R: Large scale analysis of protein stability in OMIM disease related human protein variants. BMC Genomics 2016 17(Suppl 2):397. 
-		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2726-y?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
-	<li>	
-		Chen T, Wang Z, Zhou W, Chong Z, Meric-Bernstam F, Mills GB, Chen K: Hotspot mutations delineating diverse mutational signatures and biological utilities across cancer types. BMC Genomics 2016 17(Suppl 2):394. 
-		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2727-x?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a></li><br>
+        Field M, Burgio G, Chuah A, Al Shekaili J, Simon F, Cook M, Andrews DT. Recurrent miscalling of missense variation from short-read genome sequence data information. BMC Genomics. 2019;20(Suppl 8):S1.
+	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+        </li><br>
+	
 	<li>
-		Vorontsov IE, Khimulya G, Lukianova EN, Nikolaeva DD, Eliseeva IA, Kulakovskiy IV, Makeev VJ: Negative selection maintains transcription factor binding motifs in human cancer. BMC Genomics 2016 17(Suppl 2):395. 
-		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2728-9?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.
-		</li><br>
+	Polte C, Wedemeyer D, Wagner J, Oliver K, Bijvelds M, Mahoney J, de Jonge H, Sorscher E, Ignatova Z. Assessing cell-specific effects of genetic variation using tRNA microarrays. BMC Genomics. 2019;20(Suppl 8):S2.
+	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>	
+	</li><br>
+
+	<li>
+	Orioli T, Vihinen M. Benchmarking membrane proteins: subcellular localization and variant tolerance predictors. BMC Genomics. 2019;20(Suppl 8):S3.
+	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	</li><br>
+
+	<li>
+	Neerman N, Faust G, Meeks N, Modai S, Kalfon L, Falik-Zaccai T, Kaplun A. A clinically validated whole genome pipeline for structural variant detection and analysis. BMC Genomics. 2019;20(Suppl 8):S4.
+	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	</li><br>	
+
+	<li>
+	Pucci F, Rooman M. More insights into the relation between DNA ionization potentials, single base substitutions and pathogenic mutations. BMC Genomics. 2019;20(Suppl 8):S5.
+	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	</li><br>	
+
+	<li>
+        Babbi G, Martelli P, Casadio R. PhenPath: a tool for characterizing biological functions underlying different phenotypes. BMC Genomics. 2019;20(Suppl 8):S6.
+	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+        </li><br>
+
+        <li>
+	Ascolani G, Lio’ P. Modeling breast cancer progression to bone: how driver mutation order and metabolism matter. BMC Med Genet. 2019;12(Suppl 6):S1.
+	<a href="https://bmcmedgenomics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	</li><br>
+
+	<li>
+	Glicksberg B, Amadori L, Akers N, Sukhavasi K, Franzén O, Li L, Belbin G, Ayers K, Shameer K, Badgeley M, et al. Integrative analysis of loss-of-function variants in clinical and genomic data reveals novel genes associated with cardiovascular traits. BMC Med Genet. 2019;12(Suppl 6):S2.
+	<a href="https://bmcmedgenomics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	</li><br>
+
+	<li>
+	Simpson C, Zhang B, Hornbeck P, Gnad F. Systematic analysis of the intersection of disease mutations with protein modifications. BMC Med Genet. 2019;12(Suppl 6):S3.
+	<a href="https://bmcmedgenomics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	</li><br>
+
+	<li>
+	Castro A, Ozturk K, Pyke R, Xian S, Zanetti M, Carter H. Elevated neoantigen levels in tumors with somatic mutations to B2M and HLA. BMC Med Genet. 2019;12(Suppl 6):S4.	
+	<a href="https://bmcmedgenomics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	</li><br>	
+
+	<li>
+Montanucci L, Capriotti E, Frank Y, Ben-Tal N, Fariselli P. DDGun: an untrained method for the prediction of protein stability changes upon single and multiple point variations. BMC Bioinformatics. 2019;20(Suppl 14):S1.
+	<a href="https://bmcbioinformatics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	</li><br>
+
 	</ul>
--->
+
+
         The BMC special issue of the <b><a href="http://varisig.biofold.org/2015" target=blank>VarI-COSI 2016</a></b> has been published on <b><a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-18-supplement-5" target=blank>BMC Genomics</a></b> and <b><a href="https://bmcbiophys.biomedcentral.com/articles/supplements/volume-10-supplement-1" target=blank>BMC Biophysics</a></b>.
 	<br><br>
         The BMC Gemomics special issue of the <b><a href="http://varisig.biofold.org/2015" target=blank>VarI-SIG 2015</a></b> is available at the following
