--- a/schedu.html
+++ b/schedu.html
@@ -329,7 +329,7 @@ Annotation and prediction of structural/functional impacts of genetic variants.
             
             <tr>
               <td><span class="textzone"><br /><strong>12:40 - 14:00</strong></span></td>
-              <td><span class="textzone"><br /><b>Lunch Break and Poster Session with the Authors.</b>
+              <td><span class="textzone"><br /><b>Lunch Break.</b>
               </span></td>
             </tr>
           
@@ -362,7 +362,7 @@ Annotation and prediction of structural/functional impacts of genetic variants.
             <tr>
               <td><span class="textzone"><strong>14:45 - 15:05</strong><br>&nbsp;</span></td>
               <td><span class="textzone">
-              <u>Ardalan Naseri.</u> University of Central Florida, Orlando (FL).
+              <u>Shaojie Zhang.</u> University of Central Florida, Orlando (FL).
               <i><br> 
 	      Efficient haplotype matching between a query and a panel for genealogical search.
               </i>
@@ -459,6 +459,10 @@ Annotation and prediction of structural/functional impacts of genetic variants.
             <tr>
               <td><span class="textzone"><strong>18:00 - 18:05</strong></span></td>
               <td><span class="textzone">Closing remarks from the committee.</span></td>
+            </tr>
+            <tr>
+              <td><span class="textzone"><strong>18:05 - 20:00</strong></span></td>
+              <td><span class="textzone"><b>Poster session with the authors (VarI posters labelled with the letter U).</b></span></td>
             </tr>
 			
           </table><br /><br /><br />
