--- a/special.html
+++ b/special.html
@@ -235,13 +235,13 @@ type="text/css" title="Snp sig">
 	The <b><a href="http://varisig.biofold.org/2018/" target=blank>VarI-COSI 2018</a></b> Special Issue 
 	has been published on BMC Genomics and Medical Genomics and Bioinformatics. The accepted papers of the special issue 
 	are available at the
-        <a href="https://bmcgenomics.biomedcentral.com/articles/supplements/"
+        <a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-20-supplement-8"
         target=blank>BMC Genomics</a>,
 	
 	<a href="https://bmcmedgenomics.biomedcentral.com/articles/supplements/"
 	target=blank>BMC Medical Genomics</a>
         and
-        <a href="https://bmcbioinformatics.biomedcentral.com/articles/supplements"
+        <a href="https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-20-supplement-14"
         target=blank>BMC Bioinformatics</a> web pages.
 
 	<br><br>
@@ -250,38 +250,38 @@ type="text/css" title="Snp sig">
 
 	<ul>
 	<li>
-	Bromberg Y, Capriotti E, Carter H. VarI-COSI 2018: A forum for research advances in variant interpretation and diagnostics. BMC Genomics. 2019, 20 (Suppl 8): I1.	
-	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	Bromberg Y, Capriotti E, Carter H. VarI-COSI 2018: A forum for research advances in variant interpretation and diagnostics. BMC Genomics. 2019, 20 (Suppl 8): 550.	
+	<a href="https://www.ncbi.nlm.nih.gov/pubmed/31307380">PMID:31307380</a>.
         </li><br>
 
 	<li>
-        Field M, Burgio G, Chuah A, Al Shekaili J, Simon F, Cook M, Andrews DT. Recurrent miscalling of missense variation from short-read genome sequence data information. BMC Genomics. 2019;20(Suppl 8):S1.
-	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+        Field M, Burgio G, Chuah A, Al Shekaili J, Simon F, Cook M, Andrews DT. Recurrent miscalling of missense variation from short-read genome sequence data information. BMC Genomics. 2019;20(Suppl 8):546.
+	<a href="https://www.ncbi.nlm.nih.gov/pubmed/31307400">PMID:31307400</a>.
         </li><br>
 	
 	<li>
-	Polte C, Wedemeyer D, Wagner J, Oliver K, Bijvelds M, Mahoney J, de Jonge H, Sorscher E, Ignatova Z. Assessing cell-specific effects of genetic variation using tRNA microarrays. BMC Genomics. 2019;20(Suppl 8):S2.
-	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>	
+	Polte C, Wedemeyer D, Wagner J, Oliver K, Bijvelds M, Mahoney J, de Jonge H, Sorscher E, Ignatova Z. Assessing cell-specific effects of genetic variation using tRNA microarrays. BMC Genomics. 2019;20(Suppl 8):549.
+	<a href="https://www.ncbi.nlm.nih.gov/pubmed/31307398">PMID:31307398</a>.
 	</li><br>
 
 	<li>
-	Orioli T, Vihinen M. Benchmarking membrane proteins: subcellular localization and variant tolerance predictors. BMC Genomics. 2019;20(Suppl 8):S3.
-	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	Orioli T, Vihinen M. Benchmarking membrane proteins: subcellular localization and variant tolerance predictors. BMC Genomics. 2019;20(Suppl 8):547.
+	<a href="https://www.ncbi.nlm.nih.gov/pubmed/31307390">PMID:31307390</a>.
 	</li><br>
 
 	<li>
-	Neerman N, Faust G, Meeks N, Modai S, Kalfon L, Falik-Zaccai T, Kaplun A. A clinically validated whole genome pipeline for structural variant detection and analysis. BMC Genomics. 2019;20(Suppl 8):S4.
-	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	Neerman N, Faust G, Meeks N, Modai S, Kalfon L, Falik-Zaccai T, Kaplun A. A clinically validated whole genome pipeline for structural variant detection and analysis. BMC Genomics. 2019;20(Suppl 8):545.
+	<a href="https://www.ncbi.nlm.nih.gov/pubmed/31307387">PMID:31307387</a>.
 	</li><br>	
 
 	<li>
-	Pucci F, Rooman M. More insights into the relation between DNA ionization potentials, single base substitutions and pathogenic mutations. BMC Genomics. 2019;20(Suppl 8):S5.
-	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+	Pucci F, Rooman M. More insights into the relation between DNA ionization potentials, single base substitutions and pathogenic mutations. BMC Genomics. 2019;20(Suppl 8):551.
+	<a href="https://www.ncbi.nlm.nih.gov/pubmed/31307386">PMID:31307386</a>.
 	</li><br>	
 
 	<li>
-        Babbi G, Martelli P, Casadio R. PhenPath: a tool for characterizing biological functions underlying different phenotypes. BMC Genomics. 2019;20(Suppl 8):S6.
-	<a href="https://bmcgenimics.biomedcentral.com/track/pdf">PMID:TBA</a>
+        Babbi G, Martelli P, Casadio R. PhenPath: a tool for characterizing biological functions underlying different phenotypes. BMC Genomics. 2019;20(Suppl 8):548.
+	<a href="https://www.ncbi.nlm.nih.gov/pubmed/31307376">PMID:31307376</a>.
         </li><br>
 
         <li>
@@ -305,8 +305,8 @@ type="text/css" title="Snp sig">
 	</li><br>	
 
 	<li>
-Montanucci L, Capriotti E, Frank Y, Ben-Tal N, Fariselli P. DDGun: an untrained method for the prediction of protein stability changes upon single and multiple point variations. BMC Bioinformatics. 2019;20(Suppl 14):S1.
-	<a href="https://bmcbioinformatics.biomedcentral.com/track/pdf">PMID:TBA</a>
+Montanucci L, Capriotti E, Frank Y, Ben-Tal N, Fariselli P. DDGun: an untrained method for the prediction of protein stability changes upon single and multiple point variations. BMC Bioinformatics. 2019;20(Suppl 14):335.
+	<a href="https://www.ncbi.nlm.nih.gov/pubmed/31307380">PMID:31307380</a>
 	</li><br>
 
 	</ul>
