--- a/op.html
+++ b/op.html
@@ -197,33 +197,33 @@ function MM_swapImage() { //v3.0
 <link rel="stylesheet" href="css/style.css" 
 type="text/css" title="Snp sig">
 </head>
-<body onload="MM_preloadImages('img/bottoni-home2.gif')">
+<body onload="MM_preloadImages('/img/bottoni-home2.gif')">
 <div id="main">
 <br />
 <br />
 <br />
 <table width="880" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" class="style1">
   <tr>
-    <td width="39" height="39" align="top"><img src="img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
+    <td width="39" height="39" align="top"><img src="/img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
+    <td width="39" height="39"><img src="/img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
   </tr>
   <tr>
     <td width="39">&nbsp;</td>
     <td><div id="content"><table border="0">
       <tr>
-        <td colspan="3"><img src="img/vari.gif" width="524" height="110" /></td>
-        <td><div align="right"><img src="img/abaco5.jpg" width="162" height="110" /></div></td>
+        <td colspan="3"><img src="/img/vari.gif" width="524" height="110" /></td>
+        <td><div align="right"><img src="/img/abaco5.jpg" width="162" height="110" /></div></td>
       </tr>
      <tr>
         <td ><br >
           </td>
         </tr>
       <tr>
-        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','img/bottoni-home2.gif',1)"><img src="img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','/img/bottoni-home2.gif',1)"><img src="/img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
       </tr>
       <tr>
         <td colspan="4"> <p class="textzone"><br />
@@ -236,10 +236,8 @@ type="text/css" title="Snp sig">
 		<li>Personal Genomics, GWAS studies and SNV prioritization.</li>
 		<li>Population genomics and phylogenetic analysis.</li>
 	
-<!--	
 		<br>
-		<a href="https://easychair.org/conferences/?conf=ismb2018abstracts" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','img/submit1.gif',1)" target="blank" class="mouse"><img src="img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
--->
+		<a href="https://easychair.org/conferences/?conf=ismb2020abstracts" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','/img/submit1.gif',1)" target="blank" class="mouse"><img src="/img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
 		<br /><br>
 		Proposals that demonstrate both the development of new computational techniques AND their application to Molecular and Systems Biology, with significant outcomes to biomedical, agricultural, and environmental questions are especially encouraged.
 		<br /><br />
@@ -253,9 +251,9 @@ Proposals submitted for review should represent original research.
 <br /><br />
 <i>&nbsp;&nbsp;&nbsp;Note:</i>Only the previously unpublished work will be considered for the special issue publication.
 <br /><br />
-Proposals will be accepted electronically, in PDF format only until, April 5, 2018. (You have until 11.59 p.m. in the time zone of your choice).
+Proposals will be accepted electronically, in PDF format only until, April 30, 2020. (You have until 11.59 PM Eastern Daylight Time).
 <br /><br />
-Notification of conditional acceptance will be provided by e-mail no later than May 3, 2018.
+Notification of conditional acceptance will be provided by e-mail no later than May 14, 2020.
 <br /><br />
 Works not accepted may be presented as regular conference posters. Poster information is available <a href='pa.html'><b>here</a></b>.
 For questions concerning the scientific content of submissions, please contact <a href='conta.html'><b>the organizers</a></b>.
@@ -276,9 +274,9 @@ For questions concerning the scientific content of submissions, please contact <
   </tr>
   
   <tr>
-    <td width="39" height="39"><img src="img/angolo-abasso-sin.jpg" width="39" height="39" align="top" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-sin.jpg" width="39" height="39" align="top" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-abasso-ds.jpg" width="39" height="39" align="top" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-ds.jpg" width="39" height="39" align="top" /></td>
   </tr>
 </table>
 <br>
