--- a/abstract.html
+++ b/abstract.html
@@ -196,33 +196,33 @@ function MM_swapImage() { //v3.0
 <link rel="stylesheet" href="css/style.css" 
 type="text/css" title="Snp sig">
 </head>
-<body onload="MM_preloadImages('img/bottoni-home2.gif','img/submit1.gif')">
+<body onload="MM_preloadImages('/img/bottoni-home2.gif','/img/submit1.gif')">
 <div id="main">
 <br />
 <br />
 <br />
 <table width="880" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" class="style1">
   <tr>
-    <td width="39" height="39" align="top"><img src="img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
+    <td width="39" height="39" align="top"><img src="/img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
+    <td width="39" height="39"><img src="/img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
   </tr>
   <tr>
     <td width="39">&nbsp;</td>
     <td><div id="content"><table border="0">
       <tr>
-        <td colspan="3"><img src="img/vari.gif" width="524" height="110" /></td>
-        <td><div align="right"><img src="img/abacov.jpg" width="162" height="110" /></div></td>
+        <td colspan="3"><img src="/img/vari.gif" width="524" height="110" /></td>
+        <td><div align="right"><img src="/img/abacov.jpg" width="162" height="110" /></div></td>
       </tr>
      <tr>
         <td ><br >
           </td>
         </tr>
       <tr>
-        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','img/bottoni-home2.gif',1)"><img src="img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','/img/bottoni-home2.gif',1)"><img src="/img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
       </tr>
       <tr>
         <td colspan="4"> <p class="textzone">
@@ -247,12 +247,12 @@ type="text/css" title="Snp sig">
 
 	<br />
 <!---
-	<a href="https://www.easychair.org/conferences/?conf=varisig2016" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','img/submit1.gif',1)" target="blank" class="mouse">
-        <img src="img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
+	<a href="https://www.easychair.org/conferences/?conf=varisig2016" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','/img/submit1.gif',1)" target="blank" class="mouse">
+        <img src="/img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
 
 	<br /><br>
 --->       
-        <p class="textzone"><img src="img/PU.gif" width="12" height="12" />   <strong>Databases, data mining algorithms and visualization tools for genetic variant analysis</strong>.
+        <p class="textzone"><img src="/img/PU.gif" width="12" height="12" />   <strong>Databases, data mining algorithms and visualization tools for genetic variant analysis</strong>.
         <br />
         Current genomic databases contain millions of SNVs and vast amounts of related
 annotation data. Information continues to flow into these resources at ever
@@ -265,7 +265,7 @@ of SNV data from literature.
         <br />
         <br />
         <br />
-        <img src="img/PU1.gif" width="12" height="12" />  <strong>Methods for predicting regulatory/structural/functional impact of genetic variants</strong>.
+        <img src="/img/PU1.gif" width="12" height="12" />  <strong>Methods for predicting regulatory/structural/functional impact of genetic variants</strong>.
         <br />
         Experimental study of functional effects of SNVs is complicated by a number of
 factors (e.g. compounding effects of variation in other genetic regions including
@@ -280,7 +280,7 @@ variation in drug response.
         <br />
         <br />
         <br />
-        <img src="img/PU.gif" alt="" width="12" height="12" />  <strong>Personal Genomics, GWAS studies and SNV prioritization</strong>.
+        <img src="/img/PU.gif" alt="" width="12" height="12" />  <strong>Personal Genomics, GWAS studies and SNV prioritization</strong>.
         <br />
         The recent development in sequencing technologies has moved personal genomics
 (and thereby personalized medicine) much closer to reality. Genome wide
@@ -295,7 +295,7 @@ possible relationships between different region of the genome.
 <br />
 <br />
 <br />
-<img src="img/PU1.gif" alt="" width="12" height="12" /> <strong> Population genomics and phylogenetic analysis</strong>.
+<img src="/img/PU1.gif" alt="" width="12" height="12" /> <strong> Population genomics and phylogenetic analysis</strong>.
 <br />
 Variation is the driving force of evolution. SNVs are the most common form of
 genetic variation. SNVs have been shown to be very useful for typing and resolving
@@ -325,9 +325,9 @@ bacterial models, as well as metagenomic studies.
   </tr>
   
   <tr>
-    <td width="39" height="39"><img src="img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
   </tr>
 </table>
 <br>
