--- a/company.html
+++ b/company.html
@@ -197,33 +197,33 @@ if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src;
 <link rel="stylesheet" href="css/style.css" 
 type="text/css" title="Snp sig">
 </head>
-<body onload="MM_preloadImages('img/bottoni-home2.gif')">
+<body onload="MM_preloadImages('/img/bottoni-home2.gif')">
 <div id="main">
 <br />
 <br />
 <br />
 <table width="880" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" class="style1">
 <tr>
-<td width="39" height="39" align="top"><img src="img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
+<td width="39" height="39" align="top"><img src="/img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
 <td>&nbsp;</td>
-<td width="39" height="39"><img src="img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
+<td width="39" height="39"><img src="/img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
 </tr>
 <tr>
 <td width="39">&nbsp;</td>
 <td><div id="content"><table border="0">
 <tr>
-<td colspan="3"><img src="img/vari.gif" width="524" height="110" /></td>
-<td><div align="right"><img src="img/abacov.jpg" width="162" height="110" /></div></td>
+<td colspan="3"><img src="/img/vari.gif" width="524" height="110" /></td>
+<td><div align="right"><img src="/img/abacov.jpg" width="162" height="110" /></div></td>
 </tr>
 <tr>
 <td ><br >
   </td>
 </tr>
 <tr>
-<td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','img/bottoni-home2.gif',1)"><img src="img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
-<td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
-<td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
-<td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
+<td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','/img/bottoni-home2.gif',1)"><img src="/img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
+<td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
+<td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
+<td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
 </tr>
 <tr>
 <td colspan="4"> <p class="textzone">
@@ -233,7 +233,7 @@ type="text/css" title="Snp sig">
 <br />
 <br />
 
-<p class="textzone"><img src="img/PU.gif" width="12" height="12" />
+<p class="textzone"><img src="/img/PU.gif" width="12" height="12" />
 <b>Company Presentations</b> 
 <br />
 Our COSI hopes to foster Industry/Academia collaborations in 
@@ -250,7 +250,7 @@ Space is limited and it may not be possible to accept all Company
 Presentation requests.
 <br />
 <br />
-<p class="textzone"><img src="img/PU1.gif" width="12" height="12" />
+<p class="textzone"><img src="/img/PU1.gif" width="12" height="12" />
 <b>Sponsorship</b>
 <br />
 We welcome company contributions to support the VarI-COSI activities. 
@@ -282,9 +282,9 @@ VarI-COSI participants.
   </tr>
   
   <tr>
-    <td width="39" height="39"><img src="img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
   </tr>
 </table>
 <br>
