--- a/conta.html
+++ b/conta.html
@@ -197,43 +197,45 @@ function MM_swapImage() { //v3.0
 <link rel="stylesheet" href="css/style.css" 
 type="text/css" title="Snp sig">
 </head>
-<body onload="MM_preloadImages('img/bottoni-home2.gif')">
+<body onload="MM_preloadImages('/img/bottoni-home2.gif')">
 <div id="main">
 <br />
 <br />
 <br />
 <table width="880" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" class="style1">
   <tr>
-    <td width="39" height="39" align="top"><img src="img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
+    <td width="39" height="39" align="top"><img src="/img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
+    <td width="39" height="39"><img src="/img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
   </tr>
   <tr>
     <td width="39">&nbsp;</td>
     <td><div id="content"><table border="0">
       <tr>
-        <td colspan="3"><img src="img/vari.gif" width="524" height="110" /></td>
-        <td><div align="right"><img src="img/abacov.jpg" width="162" height="110" /></div></td>
+        <td colspan="3"><img src="/img/vari.gif" width="524" height="110" /></td>
+        <td><div align="right"><img src="/img/abacov.jpg" width="162" height="110" /></div></td>
       </tr>
      <tr>
         <td ><br >
           </td>
         </tr>
       <tr>
-        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','img/bottoni-home2.gif',1)"><img src="img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','/img/bottoni-home2.gif',1)"><img src="/img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
       </tr>
       <tr>
         <td colspan="4"><p><br />
 	  <br>
           Direct your <strong>comments and suggestions</strong> regarding the VarI-COSI meeting to the organizers.</p>
                   <br>
-		  <strong><img src="img/PU3.gif" width="17" height="14" />  Yana Bronberg: </strong><span class="textzone">yanab@rci.rutgers.edu</span><br />
-		  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Emidio Capriotti: </strong>emidio.capriotti@unibo.it<br />
-		  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Hannah Carter: </strong>hkcarter@ucsd.edu<br />
-                  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Antonio Rausell: </strong>antonio.rausell@institutimagine.org<br />
+	<!--
+		  <strong><img src="/img/PU3.gif" width="17" height="14" />  Yana Bronberg: </strong><span class="textzone">yanab@rci.rutgers.edu</span><br />
+	-->
+		  <strong><br><img src="/img/PU3.gif" width="17" height="14" />  Emidio Capriotti: </strong>emidio.capriotti@unibo.it<br />
+		  <strong><br><img src="/img/PU3.gif" width="17" height="14" />  Hannah Carter: </strong>hkcarter@ucsd.edu<br />
+                  <strong><br><img src="/img/PU3.gif" width="17" height="14" />  Antonio Rausell: </strong>antonio.rausell@institutimagine.org<br />
 		<br>
 		<br>
                 <br />
@@ -262,9 +264,9 @@ type="text/css" title="Snp sig">
   </tr>
   
   <tr>
-    <td width="39" height="39"><img src="img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
   </tr>
 </table>
 <br>
