--- a/kd.html
+++ b/kd.html
@@ -197,55 +197,55 @@ function MM_swapImage() { //v3.0
 <link rel="stylesheet" href="css/style.css" 
 type="text/css" title="Snp sig">
 </head>
-<body onload="MM_preloadImages('img/bottoni-home2.gif')">
+<body onload="MM_preloadImages('/img/bottoni-home2.gif')">
 <div id="main">
 <br />
 <br />
 <br />
 <table width="880" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" class="style1">
   <tr>
-    <td width="39" height="39" align="top"><img src="img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
+    <td width="39" height="39" align="top"><img src="/img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
+    <td width="39" height="39"><img src="/img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
   </tr>
   <tr>
     <td width="39">&nbsp;</td>
     <td><div id="content"><table border="0">
       <tr>
-        <td colspan="3"><img src="img/vari.gif" width="524" height="110" /></td>
-        <td><div align="right"><img src="img/abacov.jpg" width="162" height="110" /></div></td>
+        <td colspan="3"><img src="/img/vari.gif" width="524" height="110" /></td>
+        <td><div align="right"><img src="/img/abacov.jpg" width="162" height="110" /></div></td>
       </tr>
      <tr>
         <td ><br >
           </td>
         </tr>
       <tr>
-        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','img/bottoni-home2.gif',1)"><img src="img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','/img/bottoni-home2.gif',1)"><img src="/img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
       </tr>
       <tr>
         <td colspan="4"> <p align="left" class="textzone">
         <br />
         <br />
 		<strong>The following is a preliminary list of dates and deadlines.</strong> Please check back soon for a more complete schedule or contact the VarI-COSI <a href='people.html'>organizers</a> with any questions and/or concerns<br />
-		<li>Poster Abstract and Presentation Proposal submissions open: <strong>January 31, 2019</strong></li>
-		<li>Early Abstracts Submission Deadline: <strong>April 11, 2019</strong></li>
-		<li>Late Poster Submissions Open: <strong>April 15, 2019</strong></li>
-		<li>Late Poster Submissions Deadline: <strong>May 15, 2019</strong></li>
-		<li>Talk and Poster Acceptance Notifications: <strong>May 9, 2019</strong></li>		
-		<li>Late Poster Acceptance Notifications: <strong>May 23, 2019</strong></li>
+		<li>Poster Abstract and Presentation Proposal submissions open: <strong>January 30, 2020</strong></li>
+		<li>Early Abstracts Submission Deadline: <strong>April 30, 2020. (11:59 PM, Eastern Daylight Time)</strong></li>
+		<li>Late Poster Submissions Open: <strong>May 4, 2020</strong></li>
+		<li>Talk and Poster Acceptance Notifications: <strong>May 14, 2020</strong></li>
+		<li>Late Poster Submissions Deadline: <strong>May 28, 2020</strong></li>
+		<li>Late Poster Acceptance Notifications: <strong>June 4, 2020</strong></li>
 
 		<br><br>
-		<b>Complete COSI Program Available:  June 4, 2019</b>
+		<b>Complete COSI Program Available:  May 22, 2020</b>
 		<br><br>
-		<b>VarI-COSI meeting: July 24, 2019</b>
+		<b>VarI-COSI meeting: July 15, 2020</b>
 		<br><br>
 		<br>
 		<b>Note:</b>
-                All Poster Abstract submissions are presented into the general conference poster session.
-                ISMB/ECCB Late Poster submission deadline is May 15, 2019. 
+                All posters are presented into the general conference poster session.
+                ISMB Late Poster submission deadline is May 28, 2020. 
         </p>
           <p align="left" class="textzone">&nbsp;</p>
           <p align="left" class="textzone">
@@ -264,9 +264,9 @@ type="text/css" title="Snp sig">
   </tr>
   
   <tr>
-    <td width="39" height="39"><img src="img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
   </tr>
 </table>
 <br>
