--- a/pa.html
+++ b/pa.html
@@ -197,33 +197,33 @@ function MM_swapImage() { //v3.0
 <link rel="stylesheet" href="css/style.css" 
 type="text/css" title="Snp sig">
 </head>
-<body onload="MM_preloadImages('img/bottoni-home2.gif')">
+<body onload="MM_preloadImages('/img/bottoni-home2.gif')">
 <div id="main">
 <br />
 <br />
 <br />
 <table width="880" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" class="style1">
   <tr>
-    <td width="39" height="39" align="top"><img src="img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
+    <td width="39" height="39" align="top"><img src="/img/angolo.jpg" alt="" width="39" height="39" align="top" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
+    <td width="39" height="39"><img src="/img/angolo-alt-ds.jpg" width="39" height="39" align="top" /></td>
   </tr>
   <tr>
     <td width="39">&nbsp;</td>
     <td><div id="content"><table border="0">
       <tr>
-        <td colspan="3"><img src="img/snp.gif" width="524" height="110" /></td>
-        <td><div align="right"><img src="img/abaco5.jpg" width="162" height="110" /></div></td>
+        <td colspan="3"><img src="/img/snp.gif" width="524" height="110" /></td>
+        <td><div align="right"><img src="/img/abaco5.jpg" width="162" height="110" /></div></td>
       </tr>
      <tr>
         <td ><br >
           </td>
         </tr>
       <tr>
-        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','img/bottoni-home2.gif',1)"><img src="img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
-        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '75px')" onMouseout="delayhidemenu()"><img src="img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','/img/bottoni-home2.gif',1)"><img src="/img/bottoni-home.gif" name="Image7" width="45" height="22" border="0" id="Image7" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu2, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-prog.gif" width="78" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu3, '165px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-sub.gif" width="113" height="22" border="0" /></a></div></td>
+        <td><div id="menu"><a href="#" onClick="return clickreturnvalue()" onMouseover="dropdownmenu(this, event, menu4, '75px')" onMouseout="delayhidemenu()"><img src="/img/bottoni-organizz.gif" width="138" height="22" border="0" /></a></div></td>
       </tr>
       <tr>
         <td colspan="4"> <p class="textzone"><br />
@@ -235,22 +235,20 @@ type="text/css" title="Snp sig">
 <li>Personal Genomics, GWAS studies and SNV prioritization.</li>
 <li>Population genomics and phylogenetic analysis. </li>
 
-<!--
 <br>
-<a href="https://easychair.org/conferences/?conf=ismb2018abstracts" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','img/submit1.gif',1)" target="blank" class="mouse"><img src="img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
--->
+<a href="https://easychair.org/conferences/?conf=ismb2020abstracts" onmouseoust="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','/img/submit1.gif',1)" target="blank" class="mouse"><img src="/img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
 <br /><br>
 
 <strong>SUBMISSION GUIDELINES:</strong>
 <br /><br />
 Posters are intended to convey a scientific result and are not advertisements for commercial software packages. There will be <a href='company.html'><b>sponsorship slots</b></a>  available for the VarI-COSI session by contacting the <a href='conta.html'><b>organizers</a></b>. A poster that is judged by the conference organizers to be an advertisement will be subject to removal without notice.
 <br /><br />
-Posters submitted may cover any area of computational or experimental genome variation biology. Posters presenting original work that is unpublished or published after August 1, 2018 are preferred.
+Posters submitted may cover any area of computational or experimental genome variation biology. Posters presenting original work that is unpublished or published after August 1, 2019 are preferred.
 <br /><br />
-Poster submission deadline is scheduled on April 5. The submitted posters will be reviewed by the poster session chair and notification of acceptance will be provided to the corresponding author no later than May 3, 2018. 
-Late poster submission will open on April 9, 2018 and will close on May 3, 2018. The final notification will be sent out on May 22, 2018. 
+Poster submission deadline is scheduled on April 30. The submitted posters will be reviewed by the poster session chair and notification of acceptance will be provided to the corresponding author no later than May 14, 2020. 
+Late poster submission will open on May 4, 2020 and will close on May 28, 2020. The final notification will be sent out on May 14, 2020. 
 Accepted posters could be also presented in the general conference poster session, submitting them separately on the main conference poster track. 
-General conference poster session <b><a href='https://www.iscb.org/ismb2018-submit/ismb2018-abstracts#guidelines'>guidelines</a></b> will apply to all poster presenters.
+General conference poster session <b><a href='https://www.iscb.org/ismb2020-submit/abstracts'>guidelines</a></b> will apply to all poster presenters.
 <br /><br />
 Authors of accepted posters may be eligible to apply for Conference Travel Fellowships. Space for posters is limited, and while we will make every effort to accommodate all interested groups, we advise you to submit your poster well before the deadline. 
 <br /><br />
@@ -280,9 +278,9 @@ Individuals may choose to submit a poster presenting a review of a specific fiel
   </tr>
   
   <tr>
-    <td width="39" height="39"><img src="img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-sin.jpg" width="39" height="39" /></td>
     <td>&nbsp;</td>
-    <td width="39" height="39"><img src="img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
+    <td width="39" height="39"><img src="/img/angolo-abasso-ds.jpg" width="39" height="39" /></td>
   </tr>
 </table>
 <br>
