--- a/schedu.html
+++ b/schedu.html
@@ -430,7 +430,7 @@ Annotation and prediction of structural/functional impacts of genetic variants.
             </tr>
 
          <tr>
-              <td><span class="textzone"><strong>16:20 - 16:40</strong><br>&nbsp;<br>&nbsp;</span></td>
+              <td><span class="textzone"><strong>16:20 - 16:40</strong><br>&nbsp;</span></td>
               <td><span class="textzone">
 
 		          <u>Muhammed Hasan Çelik.</u> Technical University of Munich, Munich, Germany.
