--- a/schedu.html
+++ b/schedu.html
@@ -231,7 +231,7 @@ type="text/css" title="Snp sig">
       </tr>
       <tr>
         <td colspan="4"><p class="textzone"><strong><br><br>
-              <img src="/img/PU3.gif" width="17" height="14"><img src="/img/PU1.gif" width="12" height="12"> VarI-COSI 2019 Meeting Programme
+              <img src="/img/PU3.gif" width="17" height="14"><img src="/img/PU1.gif" width="12" height="12"> VarI-COSI 2020 Meeting Programme
               <br>
               </strong>
         </p>
@@ -316,7 +316,8 @@ Annotation and prediction of structural/functional impacts of genetic variants.
 
 						<tr>
 							<td><span class="textzone"><br /><strong>12:40 - 14:00</strong></span></td>
-							<td><span class="textzone"><br /><b>Lunch Break.</b>
+							<td><span class="textzone"><br /><b>Lunch Break and <a href="https://iscb-ismb20.myconferencenow.com/presenters/?_poster_filter_by_track=vari-cosi" target=blank>
+								Online Posters.</a></b>
 							</span></td>
 						</tr>
 
