--- a/schedu.html
+++ b/schedu.html
@@ -295,7 +295,7 @@ Annotation and prediction of structural/functional impacts of genetic variants.
               <td><span class="textzone"><strong>12:20 - 12:30</strong><br>&nbsp;<br>&nbsp;</span></td>
               <td><span class="textzone">
 
-              <u>Joseph Atemia.</u>  Int. Centre of Insect Physiology and Ecology, Nairobi, Kenya.
+              <u>Joseph Atemia.</u>  International Centre of Insect Physiology and Ecology, Nairobi, Kenya.
 	      <br><i>
 		   Mining next-generation genome sequencing data for genetic diversity assessment of eastern Africa finger millet<br>blast fungus. <br>
               </i>
